--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@remix-run/react": "^2.4.1",
     "@remix-run/serve": "^2.4.1",
     "isbot": "^3.6.8",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
+    "mongodb": "^6.3.0",
+    "rc-state": "^1.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
